--- a/src/scss/ui/_buttons.scss
+++ b/src/scss/ui/_buttons.scss
@@ -18,7 +18,7 @@
 }
 
 .button.button_purple-text {
-    background: linear-gradient(57deg, #1D0C33 0%, #D283EA 100%);
+    background: $purple-to-pink;
     color: #fff;
     
 }
