--- a/src/scss/options/_common.scss
+++ b/src/scss/options/_common.scss
@@ -1,11 +1,26 @@
-.container-page {
-    width: 100%;
+.container-page-margin {
+    width: calc(100vw - 56px);
+    // max-width: 1825px;
+    height: calc(100vh - 36px);
+    // margin: 0 auto;
+    position: relative;
+    max-height: 969px;
     max-width: 1825px;
-    margin: 28px  auto;
+    margin: 0 auto;
+
+}
+
+.container-page {
+    width: 100vw;
+    height: 100vh;
     position: relative;
 }
+
 .container-content {
     padding: 30px 100px;
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
 }
 
 .container-relative {
