--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -1,53 +1,198 @@
-// FIRST SCREEN
-
-.bcg-color {
+.main {
     background-color: #FDFDFD;
+
+    overflow-x: hidden;
 }
+
+.screen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100vw;
+    height: 100vh;
+}
+
+// FIRST SCREEN
 
 .first-screen {
     &__bcg {
-        background-image: url('../../img/Product-page/1-screen-bg-2.png');
+        background: url(../../img/Product-page/hero-bg.png) no-repeat center center / cover;
         filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.20));
         border-radius: 100px;
-        width: 100%;
-        height: 1050px
+
     }
-    &__content-wrapper {
-        position: absolute;
-        bottom: 0;
-        left: 150px;
-        max-width: 450px;
-        max-height: 650px;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        // background-color: green;
-        &::before {
-            content: '';
-            position: absolute;
-            top: 33%;
-            left: 60%;
-            width: 115px;
-            height: 115px;
-            background-image: linear-gradient(90deg, #FBC2EB 0%, #A18CD1 100%);
-            filter: drop-shadow(0px 3px 7px rgba(23, 4, 47, 0.25)) drop-shadow(0px -3px 4px rgba(239, 175, 255, 0.19));
-            border-radius: 100%;
-            
-        }
-    }
+
+
+
     &__content {
         position: absolute;
     }
+
     &__first-title {
         max-width: 935px;
         width: 100%;
-        margin-top: 30%;
-        margin-left: auto;
+
+        position: absolute;
+        bottom: 30%;
+        right: 0;
     }
 }
 
 .scroll-ico {
     bottom: 20px;
+}
+
+.rama {
+    position: absolute;
+    bottom: -30px;
+    left: 60px;
+    padding-left: 50px;
+    padding-top: 30px;
+    max-width: 550px;
+    max-height: 650px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url(../../img/Product-page/frame-bg.png) no-repeat top center/cover;
+    backdrop-filter: blur(10px);
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 33%;
+        left: 60%;
+        width: 115px;
+        height: 115px;
+        background-image: linear-gradient(90deg, #FBC2EB 0%, #A18CD1 100%);
+        filter: drop-shadow(0px 3px 7px rgba(23, 4, 47, 0.25)) drop-shadow(0px -3px 4px rgba(239, 175, 255, 0.19));
+        border-radius: 100%;
+
+    }
+}
+
+//SECOND SCREEN
+
+.second-screen {
+    &__content {
+        margin-top: 60px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    &__left-part {
+        img {
+            max-width: 423px;
+            width: 100%;
+        }
+    }
+
+    &__right-part {
+        max-width: 1000px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 50px;
+
+    }
+
+    &__text {
+        h2 {
+            background: $purple-to-pink;
+            background-clip: text;
+            font-size: 40px;
+            font-style: normal;
+            font-weight: bold;
+            -webkit-text-fill-color: transparent;
+        }
+
+        p {
+            margin-top: 20px;
+            color: $purple-text;
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 400;
+        }
+    }
+
+    &__tabs {
+        // margin-top: 30px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 42px;
+        row-gap: 24px;
+
+    }
+
+    &__button {
+        max-width: 272px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 5px;
+        font-size: 13px;
+        letter-spacing: 0.26px;
+        text-transform: capitalize;
+    }
+}
+
+.tab {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px 20px;
+
+    background-color: rgba(120, 113, 165, 0.12);
+    border-radius: 27px;
+    gap: 10px;
+
+    &__dot {
+        width: 6px;
+        height: 6px;
+        background-color: $purple-text;
+        border-radius: 100%;
+    }
+
+    &__key {
+        color: $purple-text;
+        font-size: 10px;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 0.6px;
+    }
+
+    &__value {
+        font-size: 14px;
+        font-style: normal;
+        font-weight: bold;
+        letter-spacing: 0.84px;
+        background: $pink-to-purple;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+    }
+}
+
+// THIRD SCREEN
+
+.third-screen {
+    background: url('../../img/Product-page/3-bg.png') no-repeat center center/cover;
+    position: relative;
+
+    &--filter {
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+        }
+    }
 }
