--- a/src/scss/options/_common.scss
+++ b/src/scss/options/_common.scss
@@ -7,6 +7,7 @@
     max-height: 969px;
     max-width: 1825px;
     margin: 0 auto;
+    filter:drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.6));
 
 }
 
@@ -20,7 +21,7 @@
     padding: 30px 100px;
     width: 100%;
     height: 100%;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .container-relative {
