--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -27,6 +27,11 @@
 
     &__content {
         position: absolute;
+
+        &:nth-child(2),
+        &:nth-child(3) {
+            display: none;
+        }
     }
 
     &__first-title {
@@ -131,7 +136,7 @@
     }
 
     &__button {
-        max-width: 272px;
+        max-width: calc($index * 9);
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -139,6 +144,7 @@
         font-size: 13px;
         letter-spacing: 0.26px;
         text-transform: capitalize;
+        padding: 13px 0;
     }
 }
 
@@ -194,5 +200,157 @@
             height: 100%;
             background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
         }
+    }
+
+    &__content {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__text-block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: calc($index * 1.5);
+
+        max-width: 1072px;
+
+        h2 {
+            font-size: calc($index * .9);
+            font-weight: 500;
+
+        }
+
+        p {
+            font-size: calc($index * .7);
+            line-height: 161.5%;
+            letter-spacing: 0.4px;
+
+        }
+
+        h2,
+        p {
+            color: #fff;
+            text-align: center;
+        }
+    }
+
+    &__button {
+        padding: 10px 0;
+        align-items: center;
+        background-color: #fff;
+        text-transform: none;
+
+        p {
+            background: $purple-to-pink;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            font-size: calc($index * .45);
+            font-weight: bold;
+        }
+
+        img {}
+    }
+}
+
+// Четвертый экран
+
+.four-screen {
+
+    &__bcg {
+        background: url(../../img/Product-page/4-screen-bg1.png) no-repeat center center / cover;
+        filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.20));
+        border-radius: 100px;
+
+    }
+
+    &__rama {
+        position: absolute;
+        max-width: calc($index * 18);
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: calc((1vw + 1vh) * -1.5);
+        z-index: -1;
+
+        &::before {
+            /* создайте псевдоэлемент ::before */
+            content: "";
+            display: block;
+            padding-bottom: 56.25%;
+            /* установите соотношение сторон 16:9 */
+        }
+
+        &-blur {
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            backdrop-filter: blur(2.5px);
+            fill: rgba(113, 99, 77, 0.20);
+            z-index: -1;
+
+            &--full-blur {
+                backdrop-filter: blur(18px);
+            }
+        }
+    }
+
+    &__buttons {
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+
+        // max-width: 272px;
+        margin-left: auto;
+        // margin-right: 0;
+        max-width: calc((1vw + 1vh) * 9);
+        margin-right: calc((1vw + 1vh) * 9);
+        margin-top: calc((1vw + 1vh) * 9);
+    }
+
+    &__button {
+        padding: 10px 0;
+        align-items: center;
+        background-color: #3E304E;
+        text-transform: none;
+        box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.20);
+
+        p {
+            color: #fff;
+            font-size: calc($index * .45);
+            font-weight: normal;
+            letter-spacing: 0.26px;
+        }
+
+    }
+
+}
+
+.fifth-screen {
+    &__bcg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -2;
+    }
+    &__text {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        width: 100vw;
+        height: 100vh;
+        color: #000;
+        z-index: -1;
+        text-align: center;
+        line-height: 100vh;
+        font-size: calc($index * 1);
     }
 }
