--- a/src/scss/options/_common.scss
+++ b/src/scss/options/_common.scss
@@ -14,11 +14,12 @@
 .container-page {
     width: 100vw;
     height: 100vh;
-    position: relative;
+    // position: relative;
 }
 
 .container-content {
     padding: 30px 100px;
+    position: relative;
     width: 100%;
     height: 100%;
     overflow: hidden;
