--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -330,27 +330,67 @@
 }
 
 .fifth-screen {
+    &__content {
+        // margin-top: calc($index * 4);
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        gap: 20px;
+        justify-content: center;
+        // justify-content: space-between;
+    }
+    &__text-block {
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+
+    }
+
     &__bcg {
         position: absolute;
-        top: 0;
+        top: 0px;
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: -2;
+        z-index: 0;
+        transition: 3s;
+        &--animate {
+            top: -300px;
+        }
     }
+
     &__text {
-        position: absolute;
-        top: 0;
-        left: 0;
         width: 100%;
         height: 100%;
-        background-color: #fff;
-        width: 100vw;
-        height: 100vh;
-        color: #000;
-        z-index: -1;
+        font-weight: bold;
+        text-transform: uppercase;
+        z-index: 0;
+        background-color: #FDFDFD;
+        color: black;
         text-align: center;
-        line-height: 100vh;
-        font-size: calc($index * 1);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        mix-blend-mode: screen;
+        font-size: calc($index * 3.4);
+    }
+    &__button {
+        margin: 0 auto;
+    }
+}
+
+.sixth-screen {
+    &__content-wrapper {
+        margin-top: 64px;
+        display: flex;
+        flex-direction: row;
+        gap: 130px;
+    }
+    &__content {
+        max-width: calc(50% - 65px);
+    }
+    .swiper-container.rent-content-swiper {
+        position: relative;
     }
 }
