--- a/src/scss/ui/_buttons.scss
+++ b/src/scss/ui/_buttons.scss
@@ -8,6 +8,7 @@
     font-weight: 500;
     letter-spacing: 1.1px;
     text-transform: uppercase;
+    cursor: pointer;
 }
 
 .button.button_transparent {
@@ -19,6 +20,5 @@
 
 .button.button_purple-text {
     background: $purple-to-pink;
-    color: #fff;
-    
+    color: #fff; 
 }
