--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -36,11 +36,11 @@
     display: flex;
     justify-content: space-between;
 
-    &__calls {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-    }
+    // &__calls {
+    //     display: flex;
+    //     flex-direction: column;
+    //     align-items: flex-end;
+    // }
 
     &__buttons {
         display: flex;
