--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -340,6 +340,7 @@
         justify-content: center;
         // justify-content: space-between;
     }
+
     &__text-block {
         position: relative;
         overflow: hidden;
@@ -355,6 +356,7 @@
         height: 100%;
         z-index: 0;
         transition: 3s;
+
         &--animate {
             top: -300px;
         }
@@ -375,6 +377,7 @@
         mix-blend-mode: screen;
         font-size: calc($index * 3.4);
     }
+
     &__button {
         margin: 0 auto;
     }
@@ -385,12 +388,275 @@
         margin-top: 64px;
         display: flex;
         flex-direction: row;
-        gap: 130px;
+        gap: calc($index * 4);
     }
+
     &__content {
-        max-width: calc(50% - 65px);
+        max-width: calc(50% - 170px);
     }
+
     .swiper-container.rent-content-swiper {
         position: relative;
+        border-radius: 30px;
+        box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.20);
+    }
+
+    &__right-part {
+        // max-width: calc($index * 20);
+        width: 100%;
+    }
+}
+
+.rent-content {
+    &-swiper__nav {
+        position: absolute;
+        bottom: 30px;
+        left: 30px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        max-width: calc($index * 6.5);
+        width: 100%;
+        // background: rgba(0, 0, 0, 0.60);
+        // filter: blur(25px);
+        z-index: 1;
+    }
+
+    &__title {
+        background: linear-gradient(57deg, #1D0C33 0%, #D283EA 100%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: calc($index * 1.4);
+    }
+
+    &__content-wrapper {
+        margin-top: 15px;
+    }
+
+    &__tabs {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    &__tab {
+        display: flex;
+        max-width: calc($index * 6.55);
+        height: 47px;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        font-size: 11px;
+        font-style: normal;
+        font-weight: 600;
+        border-radius: 37px;
+        color: rgba(0, 0, 0, 0.40);
+        text-transform: uppercase;
+        transition: 0.2s;
+        border: 0px solid transparent;
+        cursor: pointer;
+
+        &--active {
+            color: #000;
+            border: 1px solid #8322CF;
+
+        }
+
+
+        // &-content {
+        //     display: flex;
+        //     flex-direction: column;
+        //     width: 100%;
+
+        // }
+    }
+
+    &__tab-contents {
+        margin-top: 21px;
+    }
+}
+
+.tab-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 10px;
+    display: none;
+
+    &__item {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+
+    }
+
+    &__key,
+    &__value {
+        padding: 15px 20px;
+    }
+
+    &__value {
+        width: 100%;
+        border-radius: 27px;
+        background: #8322CF;
+        color: white;
+        text-align: center;
+        font-size: 14px;
+    }
+
+    &__key {
+        position: relative;
+        max-width: 167px;
+        width: 100%;
+        text-align: center;
+        border-radius: 27px;
+        background: #EEE;
+        text-transform: uppercase;
+        font-size: 10px;
+        font-weight: bold;
+        display: flex;
+        align-items:center;
+        justify-content: center;
+
+        &::before {
+            content: '';
+            position: absolute;
+            width: 6px;
+            height: 6px;
+            border-radius: 100%;
+            background-color: #7C44A8;
+            left: 30px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+    }
+}
+
+#counter {
+    // text-align: center;
+    // font-family: Segoe UI;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 121.5%;
+    letter-spacing: 3.2px;
+    z-index: 1;
+    color: #FDFDFD;
+
+}
+
+.rent-content-form {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    &__row {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        gap: 20px;
+        justify-content: space-between;
+
+        input {
+            border-radius: 20px;
+            border: 1px solid $purple-text;
+            padding: 12px 36px;
+            width: 100%;
+        }
+
+        &>p {
+            align-self: center;
+            color: rgba(29, 12, 51, 0.80);
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 130%;
+            letter-spacing: 0.6px;
+            max-width: 285px;
+            width: 100%;
+
+            a {
+                background: linear-gradient(57deg, #1D0C33 0%, #D283EA 100%);
+                background-clip: text;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                font-weight: bold;
+            }
+        }
+    }
+
+    &__submit {}
+}
+
+.form-item {
+    width: 100%;
+
+    &:nth-child(1) {
+        max-width: 196px;
+    }
+}
+
+
+.list-wrapper {
+    margin-top: 28px;
+}
+
+.list-item {
+    color: $purple-text;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 170%;
+    letter-spacing: 0.4px;
+    position: relative;
+    padding-left: 25px;
+
+    span {
+        background: linear-gradient(57deg, #1D0C33 0%, #D283EA 100%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: bold;
+    }
+
+    &::before {
+        content: '';
+        position: absolute;
+        width: 3px;
+        height: 3px;
+        border-radius: 100%;
+        background-color: #7C44A8;
+        left: 5px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+}
+
+.rent-content__conditionals {
+    margin-top: 27px;
+
+    p {
+        background: $purple-to-pink;
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: 11px;
+        font-style: normal;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+    &-items {
+        margin-top: 16px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 45px;
+        row-gap: 6px;
+    }
+    &-tab {
+        width: max-content;
+        height: 38px;
     }
 }
