--- a/src/scss/options/_common.scss
+++ b/src/scss/options/_common.scss
@@ -8,6 +8,14 @@
     max-width: 1825px;
     margin: 0 auto;
     filter:drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.6));
+}
+
+.footer-container {
+    padding: 58px 156px 147px;
+    width: 100%;
+    position: relative;
+    // padding-top: 58px;
+    // padding-bottom: 147px;
 
 }
 
@@ -29,6 +37,9 @@
     width: 100%;
     height: 100%;
     position: relative;
+    &--z-index {
+        z-index: 1;
+    }
 }
 
 .absolutX-center {
