--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -135,6 +135,14 @@
 
     }
 
+    &__buttons {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        gap: 30px;
+
+    }
+
     &__button {
         max-width: calc($index * 9);
         display: flex;
@@ -145,6 +153,9 @@
         letter-spacing: 0.26px;
         text-transform: capitalize;
         padding: 13px 0;
+        &:nth-child(2) {
+            background: rgba(29, 12, 51, 0.80);
+        }
     }
 }
 
@@ -398,7 +409,7 @@
     .swiper-container.rent-content-swiper {
         position: relative;
         border-radius: 30px;
-        box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.20);
+        filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.3))
     }
 
     &__right-part {
@@ -517,7 +528,7 @@
         font-size: 10px;
         font-weight: bold;
         display: flex;
-        align-items:center;
+        align-items: center;
         justify-content: center;
 
         &::before {
@@ -534,7 +545,7 @@
     }
 }
 
-#counter {
+.counterMain {
     // text-align: center;
     // font-family: Segoe UI;
     font-size: 20px;
@@ -594,7 +605,7 @@
     width: 100%;
 
     &:nth-child(1) {
-        max-width: 196px;
+        // max-width: 196px;
     }
 }
 
@@ -647,6 +658,7 @@
         font-weight: bold;
         text-transform: uppercase;
     }
+
     &-items {
         margin-top: 16px;
         display: flex;
@@ -655,8 +667,67 @@
         column-gap: 45px;
         row-gap: 6px;
     }
+
     &-tab {
         width: max-content;
         height: 38px;
+    }
+}
+
+.seventh-screen {
+    &__bcg {
+        background: url(../../img/Product-page/7-screen-bg1.png) no-repeat top center / cover;
+        filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.20));
+        border-radius: 100px;
+    }
+
+    &__swiper-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 0;
+    }
+}
+
+.contact-form {
+    padding: 160px 0;
+    &__content {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-between;
+        max-width: 1135px;
+        width: 100%;
+        margin: 0 auto;
+
+    }
+
+    &__title {
+        background: linear-gradient(57deg, #1D0C33 0%, #D283EA 100%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: 28px;
+        font-weight: 400;
+        line-height: 32px;
+        letter-spacing: 1.4px;
+        text-transform: uppercase;
+    }
+
+    &__descr {
+        color: rgba(29, 12, 51, 0.80);
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 20px;
+        letter-spacing: 0.3px;
+    }
+
+    &__form {
+        margin-top: 0;
+    }
+    &__part:nth-child(1) {
+        max-width: 410px;
+        width: 100%;
     }
 }
