--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -8,7 +8,7 @@
         flex-direction: row;
         padding: 11px 15px 11px 45px;
         justify-content: space-between;
-        // gap: 50px;
+        gap: 40px;
         align-items: center;
     }
 
@@ -16,11 +16,11 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        gap: 70px;
+        gap: 52px;
     }
 
     &__nav {
-        max-width: 750px;
+        // max-width: 750px;
         width: 100%;
     }
 
@@ -30,23 +30,91 @@
         align-items: center;
         gap: 20px;
     }
+
+    &__logo {
+        width: 134px;
+
+        @media (max-width: 1919px) {
+           width: 100px; 
+        }
+
+        @media (max-width: 1439px) {
+            width: 71px;
+        }
+
+        @media (max-width: 1000px) {
+            &--mob {
+                width: 117px;
+            }
+            &--mob-menu {
+                width: 175px;
+            }
+        }
+
+        // @media (max-width: 1750px) {}
+
+    }
 }
 
 .header-contacts {
     display: flex;
     justify-content: space-between;
 
-    // &__calls {
-    //     display: flex;
-    //     flex-direction: column;
-    //     align-items: flex-end;
-    // }
+    &__calls {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
 
     &__buttons {
         display: flex;
         flex-direction: row;
         gap: 20px;
         justify-content: space-between;
-        width: 380px;
+        max-width: 380px;
+        width: 100%;
+    }
+}
+
+@media (max-width: 1750px) {
+    .header {
+
+
+        &__wrapper {
+            gap: 20px;
+        }
+
+        &__nav {
+            max-width: 1027px;
+        }
+
+        &__menu {
+            gap: 20px;
+        }
+    }
+
+    .header-contacts {
+
+
+        &__buttons {
+            display: flex;
+            flex-direction: row;
+            gap: 15px;
+            max-width: 285px;
+        }
+    }
+
+}
+
+@media (max-width: 1000px) {
+
+    .header {
+        background-color: unset;
+        border-radius: unset;
+        box-shadow: unset;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items:center;
     }
 }
