--- a/src/scss/options/_common.scss
+++ b/src/scss/options/_common.scss
@@ -6,9 +6,18 @@
     position: relative;
     max-height: 969px;
     max-width: 1825px;
-    margin: 0 auto;
-    filter:drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.6));
+    margin: 20px auto;
+    transition: .3s;
+
+    @media (max-width: 1000px) {
+        max-height: unset;
+        width: calc(100% - 50px);
+        height: unset;
+
+    }
 }
+
+
 
 .footer-container {
     padding: 58px 156px 147px;
@@ -31,12 +40,30 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+
+    @media (max-width: 1439px) {
+        padding: 16px 75px;
+    }
+
+    @media (max-width: 1023px) {
+        padding: 11px 53px;
+    }
+
+    @media (max-width: 1000px) {
+        padding: 11px 20px;
+        padding-top: 21px;
+    }
+
+    @media (max-width: 680px) {
+        padding: 11px 15px;
+    }
 }
 
 .container-relative {
     width: 100%;
     height: 100%;
     position: relative;
+
     &--z-index {
         z-index: 1;
     }
@@ -48,9 +75,56 @@
     transform: translateX(-50%);
     z-index: 1;
 }
+
 .abolusteY-center {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     z-index: 1;
+}
+
+.for-desc-block {
+    display: block;
+
+    @media(max-width: 1000px) {
+        display: none !important;
+    }
+}
+
+.for-mob-block {
+    display: block;
+
+    @media(min-width: 1001px) {
+        display: none !important;
+    }
+}
+
+.for-desc-flex {
+    display: flex;
+
+    @media(max-width: 1000px) {
+        display: none !important;
+    }
+}
+
+.for-mob-flex {
+    display: flex;
+
+    @media(min-width: 1001px) {
+        display: none !important;
+    }
+}
+
+.overflow-hidden {
+    overflow: hidden;
+}
+
+.overflow-x-hidden {
+    overflow-x: hidden;
+}
+.overflow-y-hidden {
+    overflow-y: hidden;
+}
+.shadow {
+    filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.6));
 }
