--- a/src/scss/options/_common.scss
+++ b/src/scss/options/_common.scss
@@ -62,7 +62,7 @@
     }
 
     @media (max-width: 680px) {
-        padding: 11px 30px;
+        padding: 11px 20px;
     }
 }
 
@@ -122,6 +122,19 @@
     }
 }
 
+.width-1000-1300 {
+    display: none;
+    @media(min-width: 1001px) and (max-width: 1300px) {
+        display: block;
+    }
+}
+.width-1300-more {
+    display: block;
+    @media(min-width: 1001px) and (max-width: 1300px) {
+        display: none;
+    }
+}
+
 .overflow-hidden {
     overflow: hidden;
 }
@@ -134,4 +147,15 @@
 }
 .shadow {
     filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.6));
+}
+.scrolling-content {
+    // @media(min-width: 1001px) {
+    //     scroll-snap-type: y mandatory;
+    //     height: 100vh;
+    //     overflow-x: hidden;
+    //     overflow-y: auto;
+    // }
+}
+.scrolling-item {
+    // scroll-snap-align: start;
 }
