--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,7 +3,7 @@
 @import "options/fonts";
 @import "options/reset";
 @import "options/swiper";
-
+@import "options/animations";
 
 @import "ui/text.scss";
 @import "ui/buttons.scss";
