--- a/src/scss/blocks/_switcher.scss
+++ b/src/scss/blocks/_switcher.scss
@@ -2,30 +2,20 @@
     position: absolute;
     max-width: 210px;
     width: 100%;
-    // background-color:aqua;
     height: 113px;
-    // top: 50%;
-    // left: 20%;
+    transition: 2.5s;
 
     &__holder {
         transition: 0.3s;
-
-        position: relative;
-        // width: 100%;
-        // height: 100%;
-        // border: #fff 1px solid;
-        // border-radius: 100px;
         backdrop-filter: blur(10px);
-        // filter: drop-shadow(0px 3px 7px rgba(23, 4, 47, 0.25)) drop-shadow(0px -3px 4px rgba(239, 175, 255, 0.19));
-        // display: flex;
-        // align-items: center;
-        // justify-content: flex-start;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
 
     }
-
     &__toggler {
-        transition: 0.3s;
-
+        transition: 1.5s;
+        // transition-delay: .5s;
         position: absolute;
         width: 95px;
         height: 85%;
@@ -33,37 +23,26 @@
         border-radius: 100%;
         margin-left: 10px;
         margin-right: 10px;
-        top: 50%;
-        // left: 10px;
-        transform: translateY(-50%);
+        &--scroll {
+            transform: translateX(100%);
+            .rama::before {content: none;}
 
+        }
     }
+
 }
 
-.switcher.switcher--scroll {
-    .switcher__holder {
-        // transition: 0.3s;
-        // justify-content: flex-end;
 
-    }
 
-    .switcher__toggler {
-        transition: 0.3s;
-        margin-left: 0;
-        margin-right: 10px;
-        // left: 0;
-        right: 10px;
-    }
-}
 
 @media(max-width: 1000px) {
     .switcher {
         max-width: 150px;
         height: 53px;
+
         &__toggler {
             width: 63px;
             height: 75%;
         }
     }
 }
-    
