--- a/src/scss/options/_common.scss
+++ b/src/scss/options/_common.scss
@@ -42,7 +42,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    // overflow: hidden;
 
     @media (max-width: 1439px) {
         padding: 16px 75px;
