--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -32,14 +32,13 @@
 
 
     &__content {
+        transition: 1.5s;
         position: absolute;
-        &:nth-child(2),
-        &:nth-child(3) {
-            display: none;
-        }
+        opacity: 0;
     }
 
     &__first-title {
+        transition: 1.5s;
         max-width: 935px;
         width: 100%;
 
@@ -48,6 +47,8 @@
         right: 0;
     }
 }
+
+
 
 .scroll-ico {
     bottom: 20px;
@@ -70,9 +71,11 @@
     backdrop-filter: blur(2.5px);
     fill: rgba(39, 2, 32, 0.47);
     z-index: -1;
+    transition: 2s;
 
     &::before {
         content: '';
+        opacity: 0;
         position: absolute;
         top: 33%;
         left: 60%;
@@ -81,9 +84,16 @@
         background-image: linear-gradient(90deg, #FBC2EB 0%, #A18CD1 100%);
         filter: drop-shadow(0px 3px 7px rgba(23, 4, 47, 0.25)) drop-shadow(0px -3px 4px rgba(239, 175, 255, 0.19));
         border-radius: 100%;
+        transition: 1.5s;
+    }
 
+    &--circle {
+        &::before {
+            opacity: 1;
+        }
     }
 }
+
 
 @media(max-width: 1830px) {
     .rama {
@@ -212,6 +222,7 @@
 //SECOND SCREEN
 
 .second-screen {
+    background-color: #fff;
     &__content-wrapper {
         height: 100%;
         width: 100%;
@@ -242,6 +253,7 @@
         flex-direction: column;
         align-items: flex-start;
         gap: 50px;
+        transition: 1s;
 
     }
 
@@ -1288,6 +1300,7 @@
         flex-direction: column;
         gap: 30px;
     }
+
     .contact-form__part:nth-child(1) {
         max-width: none;
     }
