--- a/src/scss/options/_animations.scss
+++ b/src/scss/options/_animations.scss
@@ -25,10 +25,10 @@
 }
 
 // .second-screen__text,
-.second-screen__tabs,
-.second-screen__buttons {
-  visibility: hidden;
-}
+// .second-screen__tabs,
+// .second-screen__buttons {
+//   visibility: hidden;
+// }
 
 // .second-screen__tabs,
 // .second-screen__buttons {
