--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -45,10 +45,9 @@
         position: absolute;
         bottom: 30%;
         right: 0;
+
     }
 }
-
-
 
 .scroll-ico {
     bottom: 20px;
@@ -223,6 +222,7 @@
 
 .second-screen {
     background-color: #fff;
+
     &__content-wrapper {
         height: 100%;
         width: 100%;
@@ -487,16 +487,20 @@
     background: url('../../img/Product-page/3-bg.png') no-repeat center center/cover;
     position: relative;
 
-    &--filter {
-        &::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-        }
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        opacity: 0;
+        transition: opacity .5s;
+    }
+
+    &--filter::before {
+        opacity: 1;
     }
 
     &__content {
@@ -533,6 +537,7 @@
         p {
             color: #fff;
             text-align: center;
+            // transition: 1s;
         }
     }
 
@@ -541,6 +546,7 @@
         align-items: center;
         background-color: #fff;
         text-transform: none;
+        transition: .5s;
 
         p {
             background: $purple-to-pink;
@@ -593,7 +599,7 @@
 // Четвертый экран
 
 .four-screen {
-
+    background-color: #FDFDFD;
     &__bcg {
         background: url(../../img/Product-page/4-screen-bg1.png) no-repeat center center / cover;
         filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.20));
@@ -1219,8 +1225,14 @@
         height: 100%;
     }
 
+    &__swiper-slide {
+        border-radius: 40px;
+        overflow: hidden;
+    }
+
     &__slide-img {
         height: 100%;
+
     }
 
     .rent-content-swiper__nav.seventh-screen__swiper-nav {
