animations is done

--- a/src/scss/options/_animations.scss
+++ b/src/scss/options/_animations.scss
@@ -34,3 +34,12 @@
 // .second-screen__buttons {
 //     transform-origin: bottom;
 // }
+
+// @media(max-width: 1000px) {
+//     .hide-element-bottom {
+//         display: none;
+//     }
+//     .first-screen__content.animate-element {
+//         display: none;
+//     }
+// }
