--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -748,6 +748,7 @@
 // Пятый экран
 
 .fifth-screen {
+    background-color: #FDFDFD;
     &__content {
         // margin-top: calc($index * 4);
         height: 100%;
@@ -763,26 +764,37 @@
         position: relative;
         overflow: hidden;
         width: 100%;
+    }
 
+    &__text-cover {
+        background-color: #FDFDFD;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        transition: .5s;
+        // @include observeTextSize(93, 30, 1800);
     }
 
     &__bcg {
         position: absolute;
-        top: 0px;
+        top: 100%;
         left: 0;
         width: 100%;
         height: 100%;
         z-index: 0;
-        transition: 3s;
+        transition: 1s;
 
-        &--animate {
-            top: -300px;
-        }
+        // &--animate {
+        //     top: -300px;
+        // }
     }
 
     &__text {
         width: 100%;
-        height: 100%;
+        // height: 100%;
         font-weight: bold;
         text-transform: uppercase;
         z-index: 0;
@@ -792,8 +804,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        mix-blend-mode: screen;
-        @include fontSize(93, 30, 1800)
+        mix-blend-mode: lighten;
+        // @include fontSize(93, 30, 1800)
+        font-size: 96px;
     }
 
     &__button {
@@ -804,6 +817,7 @@
 // ШЕСТОЙ ЭКРАН
 
 .sixth-screen {
+    background-color: #fdfdfd;
     &__content-wrapper {
         margin-top: 64px;
         display: flex;
@@ -813,6 +827,7 @@
 
     &__content {
         max-width: calc(50% - 170px);
+        width: 100%;
     }
 
     .swiper-container.rent-content-swiper {
