--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,7 +1,18 @@
 .header {
-    background-color: #fff;
-    border-radius: 25px;
-    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.20);
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 30px;
+    padding: 0 100px;
+    transition: .3s all;
+
+    &__desc {
+        width: 100%;
+        transition: .3s all;
+        background-color: #fff;
+        border-radius: 25px;
+        box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.20);
+    }
 
     &__wrapper {
         display: flex;
@@ -55,6 +66,16 @@
         // @media (max-width: 1750px) {}
 
     }
+}
+
+.header.active {
+    padding: 0px;
+    top: 0;
+
+    .header__desc {
+        border-radius: 0;
+    }
+
 }
 
 .header-contacts {
@@ -112,6 +133,7 @@
         padding: 11px 15px 11px 15px;
         gap: 0;
     }
+
     .header__menu {
         gap: 0;
     }
