--- a/src/scss/blocks/_switcher.scss
+++ b/src/scss/blocks/_switcher.scss
@@ -3,7 +3,7 @@
     max-width: 210px;
     width: 100%;
     height: 113px;
-    transition: 2.5s;
+    // transition: 2.5s;
 
     &__holder {
         transition: 0.3s;
@@ -14,7 +14,7 @@
 
     }
     &__toggler {
-        transition: 1.5s;
+        transition: .5s;
         // transition-delay: .5s;
         position: absolute;
         width: 95px;
