--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -32,16 +32,16 @@
 
 
     &__content {
-        transition: 1.5s;
+        // transition: 1.5s;
         position: absolute;
         opacity: 0;
     }
 
     &__first-title {
-        transition: 1.5s;
+        // transition: 1.5s;
         max-width: 935px;
         width: 100%;
-
+        opacity: 0;
         position: absolute;
         bottom: 30%;
         right: 0;
@@ -83,7 +83,7 @@
         background-image: linear-gradient(90deg, #FBC2EB 0%, #A18CD1 100%);
         filter: drop-shadow(0px 3px 7px rgba(23, 4, 47, 0.25)) drop-shadow(0px -3px 4px rgba(239, 175, 255, 0.19));
         border-radius: 100%;
-        transition: 1.5s;
+        transition: .5s;
     }
 
     &--circle {
