--- a/src/scss/options/_common.scss
+++ b/src/scss/options/_common.scss
@@ -11,8 +11,9 @@
 
     @media (max-width: 1000px) {
         max-height: unset;
-        width: calc(100% - 50px);
+        width: calc(100% - 20px);
         height: unset;
+        margin: 10px auto;
 
     }
 }
