--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -882,6 +882,7 @@
     }
 
     &__right-part {
+        height: fit-content;
         border-radius: 30px;
         /* Большая тень */
         box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.20);
